--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - init: echo "Replace me with a build script for the project."
+  - init: conda activate zip35
     command: echo "Replace me with something that should run on every start, or just
       remove me entirely."
 image:
