--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,5 @@
 tasks:
-  - init: ""
-    command: conda activate zip35
+   - command: conda deactivate && conda activate zip35
 image:
   file: .gitpod.Dockerfile
   
