--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,7 @@
 tasks:
-   - command: conda deactivate && conda activate zip35
+   - command: conda deactivate && conda activate zip35 &&
+              cp /workspace/beat-the-market-public/fix_zip35/loader.py /workspace/beat-the-market-public/fix_zip35/benchmarks.py /home/gitpod/anaconda3/envs/zip35/lib/python3.5/site-packages/zipline/data 
+   
 image:
   file: .gitpod.Dockerfile
   
