--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,10 @@
 tasks:
    - command: conda deactivate && conda activate zip35 &&
               cp /workspace/beat-the-market-public/fix_zip35/loader.py /workspace/beat-the-market-public/fix_zip35/benchmarks.py /home/gitpod/anaconda3/envs/zip35/lib/python3.5/site-packages/zipline/data &&
-              cp -RT /workspace/beat-the-market-public/fix_zip35/already_ingested_start_data_/.zipline/ /home/gitpod/.zipline
+              cp -RT /workspace/beat-the-market-public/fix_zip35/already_ingested_start_data_/.zipline/ /home/gitpod/.zipline &&
+              pip install -r requirements.txt &&
+              python -m ipykernel install --user &&
+              jupyter notebook --generate-config
    
 image:
   file: .gitpod.Dockerfile
